infra/services_deployment/DataRetrieval-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-retrieval
  namespace: avigoldshtein-dev
spec:
  selector:
    matchLabels:
      app: data-retrieval
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: data-retrieval
    spec:
      containers:
      - image: avigoldshtein/data-retrieval:latest
        name: data-retrieval
        imagePullPolicy: Always
        ports:
        - containerPort: 8004
          name: data-retrieval
