infra/services_deployment/Persister-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persister
  namespace: avigoldshtein-dev
spec:
  selector:
    matchLabels:
      app: persister
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: persister
    spec:
      containers:
      - image: avigoldshtein/persister:latest
        name: persister
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
          name: persister
