infra/services_deployment/Retriever-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retriever
  namespace: avigoldshtein-dev
spec:
  selector:
    matchLabels:
      app: retriever
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: retriever
    spec:
      containers:
      - image: avigoldshtein/data-retrieval:latest
        name: retriever
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: retriever
