infra/services_deployment/DataRetrieval-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-retrieval
  namespace: avigoldshtein-dev
spec:
  selector:
    app: data-retrieval
  ports:
    - name: data-retrieval
      protocol: TCP
      port: 8004
      targetPort: 8004
