infra/services_deployment/Enricher-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: enricher
  namespace: avigoldshtein-dev
spec:
  selector:
    app: enricher
  ports:
    - name: enricher
      protocol: TCP
      port: 8002
      targetPort: 8002
