infra/services_deployment/Preprocessor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: preprocessor
  namespace: avigoldshtein-dev
spec:
  selector:
    app: preprocessor
  ports:
    - name: preprocessor
      protocol: TCP
      port: 8001
      targetPort: 8001
