infra/services_deployment/Retriever-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: retriever
  namespace: avigoldshtein-dev
spec:
  selector:
    app: retriever
  ports:
    - name: retriever
      protocol: TCP
      port: 8000
      targetPort: 8000
